[gd_scene load_steps=17 format=3 uid="uid://d5360lvtbvie"]

[ext_resource type="Script" path="res://scenes/character/character.gd" id="1_611ae"]
[ext_resource type="PackedScene" uid="uid://c7orvpb14unq5" path="res://scenes/components/HealthComponent.tscn" id="2_2wxrl"]
[ext_resource type="Script" path="res://scenes/character/Interact.gd" id="2_psckv"]
[ext_resource type="AudioStream" uid="uid://dnjga03stbgtk" path="res://assets/sounds/zapsplat_foley_footsteps_on_wooden_floor_barefoor_16329.mp3" id="6_jjv4l"]
[ext_resource type="AudioStream" uid="uid://cwjmvymh01e63" path="res://assets/sounds/188542__deleted_user_3330286__breathjump01thm_adventure.mp3" id="7_8qef4"]
[ext_resource type="AudioStream" uid="uid://djng7flr2cva0" path="res://assets/sounds/jumping-on-wooden-floor-41234.mp3" id="8_68mf3"]
[ext_resource type="PackedScene" uid="uid://dilj54b7qj63h" path="res://scenes/character/character_animation.tscn" id="8_n7h8n"]
[ext_resource type="PackedScene" uid="uid://xo3w3js6jcj5" path="res://scenes/components/HurtBoxComponent.tscn" id="11_hti3i"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_abrjf"]
height = 1.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1cuxp"]
height = 1.7

[sub_resource type="Animation" id="Animation_rsuby"]
length = 0.001

[sub_resource type="Animation" id="Animation_8fxat"]
resource_name = "idle"
length = 3.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_vrowg"]
resource_name = "light"

[sub_resource type="Animation" id="Animation_1ts8f"]
resource_name = "move"
loop_mode = 1
step = 0.25

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b45kd"]
_data = {
"RESET": SubResource("Animation_rsuby"),
"idle": SubResource("Animation_8fxat"),
"light": SubResource("Animation_vrowg"),
"move": SubResource("Animation_1ts8f")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mwu8b"]

[node name="Character" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.14577e-05, 0.72062, -0.00247538)
collision_layer = 2
script = ExtResource("1_611ae")

[node name="HealthComponent" parent="." instance=ExtResource("2_2wxrl")]
max_hp = 10

[node name="Mesh" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_abrjf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1cuxp")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0213728, 0.722478, -0.24369)
current = true

[node name="Interact2" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.0335393, -2.38419e-07, 0.0183225)
collision_mask = 8
script = ExtResource("2_psckv")
max_interaction_distance = 3.0

[node name="Control" type="Control" parent="Camera3D/Interact2"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Camera3D/Interact2/Control"]
custom_minimum_size = Vector2(0, -10)
layout_mode = 0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 43.0
text = "Interact"

[node name="Holder" type="SpringArm3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, -0.998754, -0.0499131, 0, 0.0499131, -0.998754, -0.0213728, -0.00767004, -0.0725299)
spring_length = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b45kd")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="character_animation" parent="." node_paths=PackedStringArray("animation_player") instance=ExtResource("8_n7h8n")]
animation_player = NodePath("../AnimationPlayer")

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("11_hti3i")]
visible = false
health = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBoxComponent"]
shape = SubResource("CapsuleShape3D_mwu8b")

[node name="WalkAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jjv4l")
bus = &"SFX"

[node name="JumpAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8qef4")
bus = &"SFX"

[node name="FallAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_68mf3")
